Finished the project

--- a/odin_recipe/recipes/chicharon.html
+++ b/odin_recipe/recipes/chicharon.html
@@ -6,10 +6,29 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>chicaron Recipe</h1>
+    <h1>Chicaron Recipe</h1>
     <img src="result.jpg" alt="Finished result">
+    <h2>DESCRIPTION</h2>
     <p>Chicharrón (Spanish: [tʃitʃaˈron], plural chicharrones; Portuguese: torresmo [tuˈʁeʒmu, toˈʁezmu, toˈʁeʒmu]; Tagalog: chicharon; Chamorro: chachalon)<br>is a dish generally consisting of fried pork belly or fried pork rinds. Chicharrón may also be made from chicken, mutton, or beef.</p>
-    
+    <h2>INGREDIANTS</h2>
+    <ul>
+        <li>Pork Rinds</li>
+        <li>Oil</li>
+        <li>Water</li>
+        <li>Vinegar</li>
+        <li>Garlic</li>
+        <li>Salt</li>
+        <li>Peppercorns</li>
+    </ul>
+    <h2>STEPS</h2>
+    <ol>
+        <li>Cut the pork rinds into about 1 ½ to 2 inches. They will initially shrink in size when they render their fat in the oven but will expand and puff up when deep-fried in hot oil.</li>
+        <li>Cook in vinegar, water, garlic, peppercorns, and salt until tender but not falling apart. Drain well and refrigerate to cool completely.</li>
+        <li>Arrange the rinds in a single layer on a rack and pat down any excess moisture.</li>
+        <li>In olden times, the cooked skins are laid out under the hot sun to dry out. Since this method is not exactly doable in cold weather and is unhygienic, for one thing, I prefer to use the oven to dehydrate the skins until shrunken and brittle.   </li>
+        <li>Deep-fry in hot oil until golden and crispy and begins to float. For the best texture, do not overcrowd the pan and fry in batches as needed to maintain proper oil temperature.</li>
+        <li>Remove from pan and drain on a wire rack — season with salt and spices as desired.</li>
+    </ol>
     <a href="../index.html">HOME</a>
 
 </body>
